# DataStructuresAndAlgorithms

./: .gitsvnextmodules  README.md
C++/: CMakeLists.txt  Queue.cpp  Queue.h  deque.cpp  deque.h  dequeue.cpp  dequeue.h  main.cpp  main.h  stack.cpp  stack.h  trivial.cpp  trivial.h
C++/tests/: benchmark.cpp  benchmark.h  deque.cpp  dequeue.cpp  main.cpp  queue.cpp  stack.cpp
F#/: FSharp.sln
F#/F#/: FSharp.fsproj  FSharp.v2.ncrunchproject  deque.fs  dequeue.fs  main.fs  queue.fs  stack.fs
F#/Test/: App.config  Test.fsproj  Test.v2.ncrunchproject  deque.fs  dequeue.fs  main.fs  queue.fs  stack.fs
FSharp/: FSharp.fsproj  FSharp.sln  Program.fs  main.fs
Go/: main.go  main_test.go  stack.go  stack_test.go
Go/Deque/: deque.go  deque_test.go
Go/Dequeue/: dequeue.go  dequeue_test.go
Go/Queue/: queue.go  queue_test.go
Go/Stack/: stack.go  stack_test.go
Java/src/: DequeAlgorithmsTest.java  Java.java  Queue.java  QueueAlgorithms.java  QueueAlgorithmsTest.java  QueueTest.java  StackAlgorithms.java  StackAlgorithmsTest.java  StackTest.java  main.java  mainTest.java  stack.java
Java/src/Deque/: Deque.java  DequeAlgorithms.java  DequeTest.java
Java/src/Dequeue/: Dequeue.java  DequeueTest.java
Java/src/Queue/: Printer.java  Queue.java  QueueAlgorithms.java  QueueAlgorithmsTest.java  QueueTest.java  Task.java
Java/src/Stack/: Stack.java  StackAlgorithms.java  StackAlgorithmsTest.java  StackTest.java
Python/: Python.py  deque.py  deque_test.py  dequeue.py  dequeue_test.py  main.py  main_test.py  queue.py  queue_test.py  stack.py  stack_test.py
